--- a/Webstyle1.css
+++ b/Webstyle1.css
@@ -11,7 +11,13 @@ h1 {
     margin: 16;
     padding: 0;
     font-family: serif;
+    text-shadow: 
+     -1px -1px 0 rgb(28, 46, 68),  
+     1px -1px 0 rgb(28, 46, 68),
+     -1px  1px 0 rgb(28, 46, 68),
+     1px  1px 0 rgb(28, 46, 68);
 }
+
 .banner {
   background-color: rgb(90, 178, 250);
   color: rgb(90, 178, 250);
@@ -32,17 +38,23 @@ h1 {
 h2.zero {
     background-color: rgb(210, 11, 11);
     margin: 0;
-    padding-left: 20px;   
+    padding-left: 20px;
+       
 }
+
 h2.one {
     text-indent: 8%;
     font-size: 38px ;
 }
 
 a{
-    color: rgb(5, 4, 20);
+    color: rgb(11, 9, 43);
     text-decoration: none;
 }
+
+ a:hover {
+      color: #2763b7;
+    }
 
 .fade-line {
   border: none;
@@ -67,6 +79,25 @@ h3{
 
 p{
     margin: 2%;
+}
+footer{
+    background-color: rgb(210, 11, 11);
+    padding: 20px;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
 }
 
 
